--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="lib" path="libs/adwosdk2.3.3.jar"/>
 	<classpathentry kind="lib" path="libs/adk_android_1_0_6.jar"/>
 	<classpathentry kind="lib" path="libs/miidicredit_android_1_0_3.jar"/>
+	<classpathentry kind="lib" path="libs/WiAd.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
