--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,8 @@
 	<classpathentry kind="lib" path="libs/uu_ad_sdk_1.0.0.jar"/>
 	<classpathentry kind="lib" path="libs/AndroidAnalyticSDK3.1.1.jar"/>
 	<classpathentry kind="lib" path="libs/miidicredit_android_1_5_6.jar"/>
+	<classpathentry kind="lib" path="libs/Umeng-Android-SDK-SnsService.jar"/>
+	<classpathentry kind="lib" path="libs/commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="libs/httpmime-4.1.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
